# financial_analytics

./: README.md  analyzers.py  compare.py  main.py  parsers.py  pyproject.toml  ruff.toml  settings.py
