[project]
name = "financial_analytics"
version = "0.1.0"
description = "Analyzer of classic investment strategies on the Russian stock market"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "requests>=2.34.2",
]
